add meta data for profiles

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -2,6 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta property="og:title" content="Project Title" />
+    <meta property="og:image" content="Chipper_home_page.png" />
+    <meta
+      property="og:description"
+      content="A Twitter clone built with Javascript, React and Redux on the front end and Python, Flask, and SQLAlchemy on the back end using a PostgreSQL database."
+    />
+    <meta
+      property="og:url"
+      content="https://github.com/mipresley23/ChipperCapstoneProject"
+    />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
